apex-libraries/sfdx-source/at4dx/main/schema/objects/TestDataSupplementer__mdt/TestDataSupplementer__mdt.object-meta.xml
<CustomObject>
    <description
    >Defines ITestDataSupplementer classes that add data to SObjects necessary to meet testing requirements.</description>
    <label>Test Data Supplementer</label>
    <pluralLabel>Test Data Supplementers</pluralLabel>
</CustomObject>