apex-libraries/sfdx-source/at4dx/main/schema/objects/TestDataSupplementer__mdt/fields/BindingSObject__c.field-meta.xml
<CustomField>
    <fullName>BindingSObject__c</fullName>
    <description>The SObject Type to which the supplementing class is related.</description>
    <inlineHelpText>The SObject Type to which the supplementing class is related.</inlineHelpText>
    <label>Binding SObject</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Test_Data_Supplementers</relationshipLabel>
    <relationshipName>Test_Data_Supplementers</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>