apex-libraries/sfdx-source/at4dx/main/schema/objects/TestDataSupplementer__mdt/fields/SupplementingClass__c.field-meta.xml
<CustomField>
    <fullName>SupplementingClass__c</fullName>
    <description>The class implementing the logic to supplement the SObject.</description>
    <inlineHelpText>The class implementing the logic to supplement the SObject.</inlineHelpText>
    <label>SupplementingClass</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>