apex-libraries/sfdx-source/at4dx/main/schema/objects/TestDataSupplementer__mdt/validationRules/Minimal_BindObj_Or_BindObjAlt.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimal_BindObj_Or_BindObjAlt</fullName>
    <active>true</active>
    <description
    >This validation rule ensures that at least the &quot;Binding SObject&quot; or the &quot;Binding SObject Alternate&quot; field is specified</description>
    <errorConditionFormula
    >ISBLANK( BindingSObject__c ) &amp;&amp; ISBLANK( BindingSObjectAlternate__c )</errorConditionFormula>
    <errorMessage
    >Either the &quot;Binding SObject&quot; field or the &quot;Binding SObject Alternate&quot; field must be specified.</errorMessage>
</ValidationRule>